fix selection info number input styling for dark mode

--- a/src/fontra/client/css/ui-styling.css
+++ b/src/fontra/client/css/ui-styling.css
@@ -4,12 +4,14 @@
   --ui-list-row-foreground-color-light: black;
   --ui-list-row-background-color-light: white;
   --ui-list-row-selected-background-color-light: #DDD;
+  --ui-form-input-border-color-light: #888;
 
   --ui-list-border-color-dark: darkgray;
   --ui-list-row-border-color-dark: #333;
   --ui-list-row-foreground-color-dark: white;
   --ui-list-row-background-color-dark: #333;
   --ui-list-row-selected-background-color-dark: #555;
+  --ui-form-input-border-color-dark: #222;
 }
 
 
@@ -19,6 +21,9 @@
   --ui-list-row-foreground-color: var(--ui-list-row-foreground-color-light);
   --ui-list-row-background-color: var(--ui-list-row-background-color-light);
   --ui-list-row-selected-background-color: var(--ui-list-row-selected-background-color-light);
+  --ui-form-input-foreground-color: var(--ui-list-row-foreground-color-light);
+  --ui-form-input-background-color: var(--ui-list-row-background-color-light);
+  --ui-form-input-border-color: var(--ui-form-input-border-color-light);
 }
 
 
@@ -28,6 +33,9 @@
   --ui-list-row-foreground-color: var(--ui-list-row-foreground-color-dark);
   --ui-list-row-background-color: var(--ui-list-row-background-color-dark);
   --ui-list-row-selected-background-color: var(--ui-list-row-selected-background-color-dark);
+  --ui-form-input-foreground-color: var(--ui-list-row-foreground-color-dark);
+  --ui-form-input-background-color: var(--ui-list-row-background-color-dark);
+  --ui-form-input-border-color: var(--ui-form-input-border-color-dark);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -38,6 +46,9 @@
     --ui-list-row-foreground-color: var(--ui-list-row-foreground-color-dark);
     --ui-list-row-background-color: var(--ui-list-row-background-color-dark);
     --ui-list-row-selected-background-color: var(--ui-list-row-selected-background-color-dark);
+    --ui-form-input-foreground-color: var(--ui-list-row-foreground-color-dark);
+    --ui-form-input-background-color: var(--ui-list-row-background-color-dark);
+    --ui-form-input-border-color: var(--ui-form-input-border-color-dark);
   }
 
   :root.light-theme {
@@ -46,6 +57,9 @@
     --ui-list-row-foreground-color: var(--ui-list-row-foreground-color-light);
     --ui-list-row-background-color: var(--ui-list-row-background-color-light);
     --ui-list-row-selected-background-color: var(--ui-list-row-selected-background-color-light);
+    --ui-form-input-foreground-color: var(--ui-list-row-foreground-color-light);
+    --ui-form-input-background-color: var(--ui-list-row-background-color-light);
+    --ui-form-input-border-color: var(--ui-form-input-border-color-light);
   }
 
 }
@@ -117,6 +131,9 @@
 
 .ui-form-value input {
   font-family: "fontra-ui-regular";
+  border: solid 1px var(--ui-form-input-border-color);
+  background-color: var(--ui-form-input-background-color);
+  color: var(--ui-form-input-foreground-color);
   width: 12.5em;
 }
 
